solve z-index at header

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header {
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 11;
   color: white;
   display: flex;
   align-items: center;
